--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: linear-gradient(rgb(201, 170, 117), rgb(197, 171, 101));
-  
+  background-color: #ffdee9;
+  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
 }
 
 .login-box {
@@ -170,35 +170,74 @@ body {
   }
 }
 
-
 /* !list style */
-.cen{
+.cen {
+  margin-top: 5%;
   color: black;
 }
-#list{
-  background-color: rgb(255, 255, 255);
+#list {
+  background-color: transparent);
 }
 
-#list li{
-  background-color: chartreuse;
-  margin: 5px;
-  width: 80%;
+#list li {
+  margin: 15px;
+  background-color: transparent;
+  width: fit-content;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-input[type=checkbox]{
-     position: absolute;  
-
-    right: 40px;
-    margin-top:10px ;
-    height: 20px;     
-    width: 20px;
+#list li label {
+  padding-right: 10px;
 }
-input[type=checkbox]:checked + label.strikethrough{
-    text-decoration: line-through;
-    font-style: italic;
-    border-left: 6px solid #0cf173;
-    background-color: rgba(168, 166, 166, 0.644); 
+input[type="checkbox"] {
+  height: 15px;
+  width: 15px;
+}
+input[type="checkbox"] + label {
+  border-left: 6px solid transparent;
+}
+input[type="checkbox"]:checked + label.strikethrough {
+  text-decoration: line-through;
+  font-style: italic;
+  border-left: 6px solid transparent;
+}
 
+.top {
+  background: #642b73;
+  background: -webkit-linear-gradient(to right, #c6426e, #642b73);
+  background: linear-gradient(to right, #c6426e, #642b73);
+}
 
-    
+.myli {
+  width: 60%;
+  overflow-y: scroll;
+  height: 500px;
+}
+@media screen and (max-width: 767px) {
+  .myli {
+    width: 80%;
+    overflow-y: scroll;
+    height: 500px;
+  }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
