--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
   color: black;
 }
 #list {
-  background-color: transparent);
+  background-color: transparent;
 }
 
 #list li {
@@ -224,20 +224,20 @@ input[type="checkbox"]:checked + label.strikethrough {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
+  
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   background: transparent; 
 }
- 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: rgba(136, 136, 136, 0.075); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: rgba(85, 85, 85, 0.767); 
 }
